--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-/build/
-.DS_Store
-gen_docs.disable
-test.disable
-regression/temp*.html
-performance/temp*.html
-.idea/workspace.xml
-*~
-*.swp
-angular.js.tmproj
-/node_modules/
-/components/
-/bower_components/
-angular.xcodeproj
-.idea
-.agignore
-*.log
-libpeerconnection.log
-npm-debug.log
-/tmp/
-/scripts/bower/bower-*
-/.project
+node_modules
+dist
+.tmp
+.sass-cache
+bower_components
